--- a/Modelling/Linear_Model_Interpretation.ipynb
+++ b/Modelling/Linear_Model_Interpretation.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 31,
    "metadata": {
     "id": "rQlhGaw8QgYn"
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 32,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -55,7 +55,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 33,
    "metadata": {
     "id": "smyHNMO3VAVn"
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 34,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 37,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -270,7 +270,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 38,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -335,7 +335,7 @@
        "  'hypothesis': \"Videos with 'hashtag_indicator' decrease engagement\"}]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 39,
    "metadata": {
     "id": "-X_hRFq_d4sb"
    },
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 40,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -496,7 +496,7 @@
        "(10, 14)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 41,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -594,16 +594,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "id": "v7Am1VHBd40L"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(663, 16)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(161, 16)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#checking size of combined groups \n",
+    "df[\"skills_teach\"] = df[\"skills/teach\"]\n",
+    "df_yes = df.query(\"skills_teach * hashtag_indicator > 0\")\n",
+    "print(df_yes.shape)\n",
+    "#This is too small so we wont consider it\n",
+    "df_yes = df.query(\"korean * speed > 0\")\n",
+    "df_yes.shape\n",
+    "#These are too small so we wont consider it"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,55 +657,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "All non-zero features sorted by coefficient magnitude:\n",
-      "self_ref hasAdinTitle            -0.001582\n",
-      "has_any_affiliate skills/teach    0.006736\n",
-      "korean speed                      0.007015\n",
-      "skills/teach hasAdinTitle         0.009862\n",
-      "self_ref skills/teach             0.012974\n",
-      "                                    ...   \n",
-      "popular_brand product             0.990829\n",
-      "product speed                     1.126216\n",
-      "speed prime_hour                  1.426781\n",
-      "popular_brand prime_hour          1.534968\n",
-      "popular_brand speed               1.718733\n",
-      "Length: 91, dtype: float64\n",
-      "\n",
-      "Top 10 most important features:\n",
-      "speed hasAdinText          -0.637584\n",
-      "korean                      0.718873\n",
-      "product prime_hour          0.813412\n",
-      "popular_brand               0.844806\n",
-      "prime_hour hasAdinText     -0.891425\n",
-      "popular_brand product       0.990829\n",
-      "product speed               1.126216\n",
-      "speed prime_hour            1.426781\n",
-      "popular_brand prime_hour    1.534968\n",
-      "popular_brand speed         1.718733\n",
-      "dtype: float64\n",
-      "\n",
-      "Formulated hypotheses:\n",
-      "1. Videos that combine 'speed' and 'hasAdinText' decrease views (coef=-0.637584)\n",
-      "2. Videos with 'korean' increase views (coef=0.718873)\n",
-      "3. Videos that combine 'product' and 'prime_hour' increase views (coef=0.813412)\n",
-      "4. Videos with 'popular_brand' increase views (coef=0.844806)\n",
-      "5. Videos that combine 'prime_hour' and 'hasAdinText' decrease views (coef=-0.891425)\n",
-      "6. Videos that combine 'popular_brand' and 'product' increase views (coef=0.990829)\n",
-      "7. Videos that combine 'product' and 'speed' increase views (coef=1.126216)\n",
-      "8. Videos that combine 'speed' and 'prime_hour' increase views (coef=1.426781)\n",
-      "9. Videos that combine 'popular_brand' and 'prime_hour' increase views (coef=1.534968)\n",
-      "10. Videos that combine 'popular_brand' and 'speed' increase views (coef=1.718733)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Extract coefficients\n",
     "transformed_feature_names = pipe_linear.named_steps['interaction_terms'].get_feature_names_out(features)\n",
@@ -727,66 +708,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'feature': 'speed hasAdinText',\n",
-       "  'coefficient': -0.6375841563629866,\n",
-       "  'expected_direction': 'negative',\n",
-       "  'hypothesis': \"Videos that combine 'speed' and 'hasAdinText' decrease views\"},\n",
-       " {'feature': 'korean',\n",
-       "  'coefficient': 0.7188726902164926,\n",
-       "  'expected_direction': 'positive',\n",
-       "  'hypothesis': \"Videos with 'korean' increase views\"},\n",
-       " {'feature': 'product prime_hour',\n",
-       "  'coefficient': 0.8134122047713994,\n",
-       "  'expected_direction': 'positive',\n",
-       "  'hypothesis': \"Videos that combine 'product' and 'prime_hour' increase views\"},\n",
-       " {'feature': 'popular_brand',\n",
-       "  'coefficient': 0.8448064790479867,\n",
-       "  'expected_direction': 'positive',\n",
-       "  'hypothesis': \"Videos with 'popular_brand' increase views\"},\n",
-       " {'feature': 'prime_hour hasAdinText',\n",
-       "  'coefficient': -0.8914245652653439,\n",
-       "  'expected_direction': 'negative',\n",
-       "  'hypothesis': \"Videos that combine 'prime_hour' and 'hasAdinText' decrease views\"},\n",
-       " {'feature': 'popular_brand product',\n",
-       "  'coefficient': 0.9908293133774675,\n",
-       "  'expected_direction': 'positive',\n",
-       "  'hypothesis': \"Videos that combine 'popular_brand' and 'product' increase views\"},\n",
-       " {'feature': 'product speed',\n",
-       "  'coefficient': 1.1262157001107433,\n",
-       "  'expected_direction': 'positive',\n",
-       "  'hypothesis': \"Videos that combine 'product' and 'speed' increase views\"},\n",
-       " {'feature': 'speed prime_hour',\n",
-       "  'coefficient': 1.4267813713817523,\n",
-       "  'expected_direction': 'positive',\n",
-       "  'hypothesis': \"Videos that combine 'speed' and 'prime_hour' increase views\"},\n",
-       " {'feature': 'popular_brand prime_hour',\n",
-       "  'coefficient': 1.534968178757522,\n",
-       "  'expected_direction': 'positive',\n",
-       "  'hypothesis': \"Videos that combine 'popular_brand' and 'prime_hour' increase views\"},\n",
-       " {'feature': 'popular_brand speed',\n",
-       "  'coefficient': 1.7187332540226066,\n",
-       "  'expected_direction': 'positive',\n",
-       "  'hypothesis': \"Videos that combine 'popular_brand' and 'speed' increase views\"}]"
-      ]
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "hypotheses"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,38 +850,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Results Summary: 2 out of 10 hypotheses confirmed (20.0%)\n",
-      "\n",
-      "Confirmed Hypotheses:\n",
-      "- Videos that combine 'speed' and 'hasAdinText' decrease views (p=0.0000)\n",
-      "  Mean with speed hasAdinText: nan\n",
-      "  Mean without speed hasAdinText: nan\n",
-      "  Difference: -0.0118\n",
-      "- Videos with 'korean' increase views (p=0.0099)\n",
-      "  Mean with korean: 0.0597\n",
-      "  Mean without korean: 0.0562\n",
-      "  Difference: 0.0035\n",
-      "\n",
-      "Unconfirmed Hypotheses:\n",
-      "- Videos that combine 'product' and 'prime_hour' increase views (p=0.0000)\n",
-      "- Videos with 'popular_brand' increase views (p=0.0000)\n",
-      "- Videos that combine 'prime_hour' and 'hasAdinText' decrease views (p=0.3188)\n",
-      "- Videos that combine 'popular_brand' and 'product' increase views (p=0.0000)\n",
-      "- Videos that combine 'product' and 'speed' increase views (p=0.7537)\n",
-      "- Videos that combine 'speed' and 'prime_hour' increase views (p=0.8852)\n",
-      "- Videos that combine 'popular_brand' and 'prime_hour' increase views (p=0.0079)\n",
-      "- Videos that combine 'popular_brand' and 'speed' increase views (p=0.0006)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "confirmed_hypotheses = results_df[results_df['hypothesis_confirmed'] == True]\n",
@@ -980,6 +882,18 @@
     "        print(f\"- {row['hypothesis']} (p={row['p_value']:.4f})\")\n",
     "    else:\n",
     "        print(f\"- {row['hypothesis']} (Reason: {row['result']})\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#checking size of combined groups \n",
+    "df_yes = df.query(\"speed * hasAdinText > 0\")\n",
+    "df_yes.shape\n",
+    "#This is too small so we wont consider it"
    ]
   },
   {
