--- a/Modelling/Final_Hypothesis_Testing.ipynb
+++ b/Modelling/Final_Hypothesis_Testing.ipynb
@@ -33,18 +33,20 @@
     "\n",
     "Our type II error rate is not as important. It is possible, for example, that we missed the fact that including a hashtag increases views. However, this is fine for our use case. We would rather miss out on recommendations to make than make recommendations that don't work. This is an important point also for power calculation considerations. We are forced to conduct our analysis on data that is already existing and do not have the ability to design a future study with a desired sample size necessary to make sure our study has a certain desired power. \n",
     "\n",
-    "Next, we should see if these statistically significant differences are practically significant. What constitutes practical significance will be subjective here.\n",
+    "Next, we should see if these statistically significant differences are practically significant. What constitutes practical significance will be subjective here. We will be using an ex-post analysis of MDE (minimum detectble effect) to find out if our differences are practically significant, as inspired by [this blog post](https://blogs.worldbank.org/en/impactevaluations/why-ex-post-power-using-estimated-effect-sizes-bad-ex-post-mde-not)  \n",
     "\n",
-    "For views/subscriber, we will say that an increase of .1 is practically significant. If a user has 100,000 subscribers, this means that the video got an extra 10,000 views. If a user has 10,000 subscribers, this means that the video got an extra 1,000 views. \n",
+    "For views/subscriber, we will say that an increase of .1 is practically significant. If a user has 100,000 subscribers, this means that the video got an extra 10,000 views. If a user has 10,000 subscribers, this means that the video got an extra 1,000 views. This is a subjective judgment call.\n",
     "\n",
-    "For engagement....\n",
+    "I belive this means that our desired value of Cohen's $d$ is $0.1 / \\sqrt{ \\sigma_1^2 + \\sigma_2^2 }$ or larger. \n",
     "\n",
-    "We will be using an ex-post analysis of MDE (minimum detectble effect) to find out if our differences are practically significant, as inspired by [this blog post](https://blogs.worldbank.org/en/impactevaluations/why-ex-post-power-using-estimated-effect-sizes-bad-ex-post-mde-not) (being added) "
+    "For engagement, it is hard to say what is significant. We will use the following standard rough estimates: A value of 0.2 represents a small effect size. \n",
+    "A value of 0.5 represents a medium effect size \r\n",
+    "A value of 0.8 represents a large effect size  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 62,
    "id": "f7d33ed4-e11a-4f51-b157-f8ef7fcb89b1",
    "metadata": {},
    "outputs": [
@@ -61,7 +63,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,52 +82,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 63,
    "id": "990e515f-530f-472b-ae6e-42aea39bade6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "any_ht\n",
-      "p-value: 2.2368813261800056e-05\n",
-      "t-stat: 4.083816568105291\n",
-      "Pass: True\n",
-      "variances: 38.600522273288675 11.268364658202877\n",
-      "has_any_affiliate\n",
-      "p-value: 2.326208027584433e-12\n",
-      "t-stat: -6.930613675538518\n",
-      "Pass: True\n",
-      "variances: 1.5667041297945037 32.05638862504538\n",
-      "hasAdinText\n",
-      "p-value: 0.3847060669838128\n",
-      "t-stat: 0.29319192748459416\n",
-      "Pass: False\n",
-      "variances: 27.09204363059775 29.220039282372912\n",
-      "isChannelVerified\n",
-      "p-value: 6.965578537378104e-13\n",
-      "t-stat: -7.098876241368914\n",
-      "Pass: True\n",
-      "variances: 2.7178139581688323 42.275963786372095\n",
-      "popular_brand\n",
-      "p-value: 0.003566895227436586\n",
-      "t-stat: -2.6916694132460037\n",
-      "Pass: True\n",
-      "variances: 4.830906603154853 33.309647775579364\n",
-      "korean\n",
-      "p-value: 1.9683027635063296e-05\n",
-      "t-stat: 4.146771396809218\n",
-      "Pass: True\n",
-      "variances: 203.7225309059297 16.326070479286987\n",
-      "prime_hour\n",
-      "p-value: 0.04582592760237109\n",
-      "t-stat: -1.687029116929263\n",
-      "Pass: False\n",
-      "variances: 7.25480481048998 47.252575933148236\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Note that we will be using Welch's t-test instead; we have gone ahead and printed the variances of all the groups involved as we run the following code\n",
     "#to show why we should be doing this. \n",
@@ -136,6 +96,91 @@
     "views_features = [\"any_ht\", \"has_any_affiliate\", \"hasAdinText\", \"isChannelVerified\", \"popular_brand\", \"korean\", \"prime_hour\"]\n",
     "eng_features = [\"isChannelVerified\", \"korean\", \"prime_hour\", \"popular_brand\", \"any_ht\", \"comparing_products\", \"product\", \"self_ref\"] \n",
     "\n",
+    "def cohen(x,y): \n",
+    "    '''x is the series from the yes df, y is no'''\n",
+    "    mean_with = x.mean()\n",
+    "    mean_without = y.mean()\n",
+    "    std_with = x.std(ddof=1)\n",
+    "    std_without = y.std(ddof=1)\n",
+    "    n_with = len(x)\n",
+    "    n_without = len(y) \n",
+    "    pooled_std = np.sqrt(((n_with - 1) * std_with**2 + (n_without - 1) * std_without**2) / (n_with + n_without - 2))\n",
+    "    cohens_d = abs( (mean_with - mean_without) / pooled_std )\n",
+    "    desired_d = abs(0.1 / pooled_std) \n",
+    "    #we take the abs since which group we expect to be higher vs lower depends on the test \n",
+    "    return (cohens_d, desired_d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "fdd9a30a-19c1-49dc-9c05-8fcc57df8569",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "any_ht\n",
+      "p-value: 2.2368813261800056e-05\n",
+      "t-stat: 4.083816568105291\n",
+      "Pass: True\n",
+      "Cohen's d: 0.08166307936719766\n",
+      "Desired d: 0.018614694438988753\n",
+      "Desired difference obtained: True\n",
+      "variances: 38.600522273288675 11.268364658202877\n",
+      "has_any_affiliate\n",
+      "p-value: 2.326208027584433e-12\n",
+      "t-stat: -6.930613675538518\n",
+      "Pass: True\n",
+      "Cohen's d: 0.10317966863463907\n",
+      "Desired d: 0.01860973050520539\n",
+      "Desired difference obtained: True\n",
+      "variances: 1.5667041297945037 32.05638862504538\n",
+      "hasAdinText\n",
+      "p-value: 0.3847060669838128\n",
+      "t-stat: 0.29319192748459416\n",
+      "Pass: False\n",
+      "Cohen's d: 0.009001836449133846\n",
+      "Desired d: 0.0186005647314472\n",
+      "Desired difference obtained: False\n",
+      "variances: 27.09204363059775 29.220039282372912\n",
+      "isChannelVerified\n",
+      "p-value: 6.965578537378104e-13\n",
+      "t-stat: -7.098876241368914\n",
+      "Pass: True\n",
+      "Cohen's d: 0.12607301523049674\n",
+      "Desired d: 0.01863365138262357\n",
+      "Desired difference obtained: True\n",
+      "variances: 2.7178139581688323 42.275963786372095\n",
+      "popular_brand\n",
+      "p-value: 0.003566895227436586\n",
+      "t-stat: -2.6916694132460037\n",
+      "Pass: True\n",
+      "Cohen's d: 0.04721684799127134\n",
+      "Desired d: 0.01860318672006871\n",
+      "Desired difference obtained: True\n",
+      "variances: 4.830906603154853 33.309647775579364\n",
+      "korean\n",
+      "p-value: 1.9683027635063296e-05\n",
+      "t-stat: 4.146771396809218\n",
+      "Pass: True\n",
+      "Cohen's d: 0.48952664362319026\n",
+      "Desired d: 0.018735484196382744\n",
+      "Desired difference obtained: True\n",
+      "variances: 203.7225309059297 16.326070479286987\n",
+      "prime_hour\n",
+      "p-value: 0.04582592760237109\n",
+      "t-stat: -1.687029116929263\n",
+      "Pass: False\n",
+      "Cohen's d: 0.035778027873058095\n",
+      "Desired d: 0.018603425908613417\n",
+      "Desired difference obtained: True\n",
+      "variances: 7.25480481048998 47.252575933148236\n"
+     ]
+    }
+   ],
+   "source": [
     "for feature in views_features: \n",
     "    yes = df.loc[ df[feature] == 1]\n",
     "    no = df.loc[ df[feature] == 0]\n",
@@ -144,6 +189,9 @@
     "    print(\"p-value:\", p_value/2) #This is technically a one-tailed test so we divide the p-value by 2\n",
     "    print(\"t-stat:\", t_stat)\n",
     "    print(\"Pass:\", p_value/2 < 0.005)\n",
+    "    print(\"Cohen's d:\", cohen( yes[\"views\"], no[\"views\"])[0]  )\n",
+    "    print(\"Desired d:\", cohen( yes[\"views\"], no[\"views\"])[1]  )\n",
+    "    print(\"Desired difference obtained:\", cohen( yes[\"views\"], no[\"views\"])[0] > cohen( yes[\"views\"], no[\"views\"])[1] )\n",
     "    print(\"variances:\", yes[\"views\"].var(), no[\"views\"].var())\n",
     "    #print(\"variance:\", yes[\"views\"].var, no[\"views\"].var)\n",
     "    #When t_stat>0 we know that the \"yes\" group mean is greater than the \"no\" group mean. Otherwise, it's less than. "
@@ -151,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 68,
    "id": "97a920b9-b242-4da0-918c-493a979c29d8",
    "metadata": {},
    "outputs": [
@@ -163,41 +211,57 @@
       "p-value: 1.8424588246660634e-22\n",
       "t-stat: 9.711456550257012\n",
       "Pass: True\n",
+      "Cohen's d: 0.20688476655837193\n",
+      "Effect size: Small\n",
       "variances: 2.7178139581688323 42.275963786372095\n",
       "korean\n",
       "p-value: 0.06469617079865729\n",
       "t-stat: 1.5184830117894588\n",
       "Pass: False\n",
+      "Cohen's d: 0.05697002981458164\n",
+      "Not a significant effect size.\n",
       "variances: 203.7225309059297 16.326070479286987\n",
       "prime_hour\n",
       "p-value: 2.397052061507639e-09\n",
       "t-stat: 5.86142932445298\n",
       "Pass: True\n",
+      "Cohen's d: 0.1339735017390076\n",
+      "Not a significant effect size.\n",
       "variances: 7.25480481048998 47.252575933148236\n",
       "popular_brand\n",
       "p-value: 7.165796787125945e-26\n",
       "t-stat: -10.625127727251936\n",
       "Pass: True\n",
+      "Cohen's d: 0.3350873622164535\n",
+      "Effect size: Small\n",
       "variances: 4.830906603154853 33.309647775579364\n",
       "any_ht\n",
       "p-value: 1.137741311926081e-47\n",
       "t-stat: -14.587929735696385\n",
       "Pass: True\n",
+      "Cohen's d: 0.34209686442231635\n",
+      "Effect size: Small\n",
       "variances: 38.600522273288675 11.268364658202877\n",
       "comparing_products\n",
       "p-value: 2.041758511745789e-08\n",
       "t-stat: -5.527548650061268\n",
       "Pass: True\n",
+      "Cohen's d: 0.18253445458060402\n",
+      "Not a significant effect size.\n",
       "variances: 41.65342533494001 27.44246485246804\n",
       "product\n",
       "p-value: 6.812831933888577e-05\n",
       "t-stat: -3.820528548627721\n",
       "Pass: True\n",
+      "Cohen's d: 0.10039017667328828\n",
+      "Not a significant effect size.\n",
       "variances: 53.859700020517785 22.758204791646623\n",
       "self_ref\n",
       "p-value: 0.005869779219204239\n",
       "t-stat: 2.5204618832049106\n",
       "Pass: False\n",
+      "Cohen's d: 0.05646010405333533\n",
+      "Not a significant effect size.\n",
       "variances: 40.26693642249657 18.096428151578813\n"
      ]
     }
@@ -211,6 +275,17 @@
     "    print(\"p-value:\", p_value/2)\n",
     "    print(\"t-stat:\", t_stat)\n",
     "    print(\"Pass:\", p_value/2 < 0.005)\n",
+    "    print(\"Cohen's d:\", cohen( yes[\"engagement\"], no[\"engagement\"])[0]  )\n",
+    "\n",
+    "    if cohen( yes[\"engagement\"], no[\"engagement\"])[0] < 0.2:\n",
+    "        print(\"Not a significant effect size.\")\n",
+    "    elif 0.2 <= cohen( yes[\"engagement\"], no[\"engagement\"])[0] < 0.5:\n",
+    "        print(\"Effect size: Small\")\n",
+    "    elif 0.5 <= cohen( yes[\"engagement\"], no[\"engagement\"])[0] < 0.8:\n",
+    "        print(\"Effect size: Medium\")\n",
+    "    elif cohen( yes[\"engagement\"], no[\"engagement\"])[0] >= 0.8:\n",
+    "        print(\"Effect size: Large\") \n",
+    "    \n",
     "    print(\"variances:\", yes[\"views\"].var(), no[\"views\"].var())\n",
     "    #When t_stat>0 we know that the \"yes\" group mean is greater than the \"no\" group mean. Otherwise, it's less than. "
    ]
@@ -229,18 +304,19 @@
    "metadata": {},
    "source": [
     "We have confirmed that the following posts have significantly different views/subscriber on average:\n",
-    "1) Posts that contain at least one hashtag in the title or description have higher views/subscriber\n",
-    "2) Posts that contain an affiliate link have lower views/subscriber\n",
-    "3) Posts from users that are verified have lower views/subscriber\n",
-    "4) Posts that contain a keyword from the \"korean\" keyword group have higher views/subscriber\n",
+    "1) Posts that contain at least one hashtag in the title or description have higher views/subscriber with a desired effect size \n",
+    "2) Posts that contain an affiliate link have lower views/subscriber with a desired effect size\n",
+    "3) Posts from users that are verified have lower views/subscriber with a desired effect size \n",
+    "4) Posts that mention a popular brand have higher views/subscriber with a desired effect size \n",
+    "5) Posts that contain a keyword from the \"korean\" keyword group have higher views/subscriber with a desired effect size \n",
     "\n",
     "We have confirmed that the following posts have significantly different engagement rates on average:\n",
-    "1) Posts from users that are verified have higher engagement\n",
-    "2) Posts posted during a prime hour have higher engagement\n",
-    "3) Posts that mention a popular brand have lower engagement\n",
-    "4) Posts that contain at least one hashtag in the title or description have lower engagement.\n",
-    "5) Posts that contain at least one keyword from the \"comparing_products\" keyword group have lower engagement\n",
-    "6) Posts that contain at least one keyword from the \"product\" keyword group have lower engagement. "
+    "1) Posts from users that are verified have higher engagement with a small effect size \n",
+    "2) Posts posted during a prime hour have higher engagement but without a significant effect size \n",
+    "3) Posts that mention a popular brand have lower engagement with a small effect size \n",
+    "4) Posts that contain at least one hashtag in the title or description have lower engagement with a small effect size \n",
+    "5) Posts that contain at least one keyword from the \"comparing_products\" keyword group have lower engagement but without a significant effect size \n",
+    "6) Posts that contain at least one keyword from the \"product\" keyword group have lower engagement but without a significant effect size "
    ]
   },
   {
